[package]
name = "bin-tree"
description = "Binary Tree utilities"
version = "0.9.0"
license = "Apache-2.0"
edition = "2021"
authors = ["natfoam"]
repository = "https://github.com/natfoam/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uints = { path = "../uints", version = "0.11.0" }