[package]
name = "bit-list"
version = "0.28.2"
description = "A lazy list of bits"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uints = { path = "../uints", version = "0.11.1" }
list-fn = { path = "../list-fn", version = "0.20.0" }
lim-bit-vec = { path = "../lim-bit-vec", version = "0.8.1" }