[package]
name = "fixed-array"
version = "0.4.0"
authors = ["natfoam"]
edition = "2021"
description = "Fixed-size array"
license = "Apache-2.0"
repository = "https://github.com/natfoam/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
