[package]
name = "lim-bit-vec"
version = "0.1.0"
authors = ["natfoam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uints = { path = "../uints", version = "0.6.1" }
list-fn = { path = "../list-fn", version = "0.17.0" }
