[package]
name = "lim-bit-vec"
version = "0.4.1"
authors = ["natfoam"]
edition = "2018"
description = "Limited bit vectors"
license = "Apache-2.0"
repository = "https://github.com/natfoam/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uints = { path = "../uints", version = "0.7.0" }
list-fn = { path = "../list-fn", version = "0.19.1" }
