[package]
name = "lim-bit-vec"
version = "0.8.2"
description = "Limited bit vectors"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uints = { path = "../uints", version = "0.11.1" }
list-fn = { path = "../list-fn", version = "0.20.0" }
