[package]
name = "list-fn"
version = "0.20.1"
description = "A generic lazy list"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
take_mut.workspace = true
