[package]
name = "publish-ws"
version = "0.1.3"
authors = ["natfoam"]
edition = "2018"
description = "Publish Workspace Packages"
license = "Apache-2.0"
repository = "https://github.com/natfoam/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.8"
serde = "1.0.126"
serde_derive = "1.0.126"