[package]
name = "publish-ws"
version = "0.1.9"
authors = ["natfoam"]
edition = "2021"
description = "Publish Workspace Packages"
license = "Apache-2.0"
repository = "https://github.com/natfoam/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = "1.0.138"
serde_derive = "1.0.138"