[package]
name = "publish-ws"
version = "0.1.11"
description = "Publish Workspace Packages"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml.workspace = true
serde.workspace = true
serde_derive.workspace = true