[package]
name = "sha2-compress"
version = "0.5.0"
authors = ["natfoam"]
edition = "2021"
description = "SHA2 compress function"
license = "Apache-2.0"
repository = "https://github.com/natfoam/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uints = { path = "../uints", version = "0.9.0" }
fixed-array = { path = "../fixed-array", version = "0.3.0" }