[package]
name = "sha2-compress"
version = "0.7.2"
description = "SHA2 compress function"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uints = { path = "../uints", version = "0.11.1" }
fixed-array = { path = "../fixed-array", version = "0.4.0" }