[package]
name = "u144"
version = "0.4.0"
authors = ["natfoam"]
edition = "2018"
description = "Unsigned Integer 144 bits"
license = "Apache-2.0"
repository = "https://github.com/natfoam/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uints = { path = "../uints", version = "0.7.0" }
