[package]
name = "u144"
version = "0.7.2"
description = "Unsigned Integer 144 bits"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uints = { path = "../uints", version = "0.11.2" }
