[package]
name = "u160"
version = "0.2.1"
description = "Unsigned Integer 160 bits"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
