[package]
name = "uints"
version = "0.5.0"
authors = ["natfoam"]
edition = "2018"
description = "Unsigned Integer Properties"
license = "Apache-2.0"
repository = "https://github.com/natfoam/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed-array = { path = "../fixed-array", version = "0.1.0" }