[package]
name = "uints"
version = "0.7.0"
authors = ["natfoam"]
edition = "2021"
description = "Unsigned Integer Properties"
license = "Apache-2.0"
repository = "https://github.com/natfoam/lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed-array = { path = "../fixed-array", version = "0.2.0" }