[package]
name = "uints"
version = "0.11.2"
description = "Unsigned Integer Properties"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed-array = { path = "../fixed-array", version = "0.4.1" }