[package]
name = "yagen"
version = "0.3.1"
description = "Yet Another Generator Implementation"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
